vuedemo/chart/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vuedemo
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  vuedemo
